Controls/HeaderAndFooter/PlayerTopNavbar.razor.css
.logo {
    min-height: 20px;
    max-height: 40px;
    width: auto;
}

/*================= Start: Top NavBar icon ======================*/
.fa-solid {
    width: 18px;
    height: 18px;
    display: inline-block;
    position: relative;
}

.poker-card {
    background: url('./img/poker-cards.svg') center center no-repeat;
}
.gpa-token {
    background: url('./img/tokenIcon.png') center center no-repeat;
    top: 4px !important;
}

.gpa-icon {
    background: url('./img/gpa-icon.svg') center center no-repeat;
}

.home-icon {
    background: url('./img/home.svg') center center no-repeat;
}

.explore-icon {
    background: url('./img/explore.svg') center center no-repeat;
}

.featured-icon {
    background: url('./img/featured.svg') center center no-repeat;
}

.lottery {
    background: url('./img/lottery.svg') center center no-repeat;
}

.poker-card, .gpa-icon, .explore-icon, .featured-icon, .lottery, .home-icon, .gpa-token {
    background-size: 100% 100% !important;
    top: 0;
    margin-right: 4px;
}

.nav-item ::deep .nav-link:hover .gpa-icon {
    background: url('./img/GPA-icon-hover.svg') center center no-repeat;
    background-size: 100% 100%;
}

.nav-item ::deep .nav-link:hover .home-icon {
    background: url('./img/home-hover.svg') center center no-repeat;
    background-size: 100% 100%;
}

.nav-item ::deep .nav-link:hover .explore-icon {
    background: url('./img/explore-hover.svg') center center no-repeat;
    background-size: 100% 100%;
}

.nav-item ::deep .nav-link:hover .featured-icon {
    background: url('./img/featured-hover.svg') center center no-repeat;
    background-size: 100% 100%;
}

.nav-item ::deep .nav-link:hover .lottery {
    background: url('./img/lottery-hover.svg') center center no-repeat;
    background-size: 100% 100%;
}

.nav-item ::deep .nav-link:hover .poker-card {
    background: url('./img/poker-cards-hover.svg') center center no-repeat;
    background-size: 100% 100%;
}

.nav-item {
    cursor: pointer;
}

.navbar-toggler {
    appearance: none;
    cursor: pointer;
    width: 3.5rem;
    height: 2.5rem;
    color: white;
    position: absolute;
    top: 0.5rem;
    right: 1rem;
    border: none;
    background: black;
}

.navbar-toggler:focus {
    outline: none;
    box-shadow: none;
}

.navbar-toggler:checked {
    background-color: rgba(255, 255, 255, 0.5);
}

.navbar-toggler.gpa-toggler {
    left: 1rem;
}

.navbar-brand.gpa-navbar-brand {
    margin-left: 0;
    padding-right: 2rem;
}

.top-row {
    height: 3.5rem;
    background-color: rgba(0,0,0,0.4);
}

.navbar-brand {
    font-size: 1.1rem;
}
.img-logo {
    width: 55px;
}
#user-image{
    display: none;
}

.bi {
    display: inline-block;
    position: relative;
    width: 1.25rem;
    height: 1.25rem;
    margin-right: 0.75rem;
    top: -1px;
    background-size: cover;
}

.bi-house-door-fill-nav-menu {
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-house-door-fill' viewBox='0 0 16 16'%3E%3Cpath d='M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5Z'/%3E%3C/svg%3E");
}

.bi-plus-square-fill-nav-menu {
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-plus-square-fill' viewBox='0 0 16 16'%3E%3Cpath d='M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0z'/%3E%3C/svg%3E");
}

.bi-list-nested-nav-menu {
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-list-nested' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M4.5 11.5A.5.5 0 0 1 5 11h10a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5zm-2-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm-2-4A.5.5 0 0 1 1 3h10a.5.5 0 0 1 0 1H1a.5.5 0 0 1-.5-.5z'/%3E%3C/svg%3E");
}

.nav-item {
    font-size: 0.9rem;
    padding-bottom: 0.5rem;
}

.nav-item:last-of-type {
    padding-bottom: 1rem;
}

.nav-item ::deep .nav-link {
    color: #d7d7d7;
    background: none;
    border: none;
    border-radius: 4px;
    height: 3rem;
    display: flex;
    align-items: center;
    line-height: 3rem;
    width: 100%;
}

.nav-item ::deep a.active {
    background-color: rgba(255,255,255,0.37);
    color: gold;
}

.nav-item ::deep .nav-link:hover {
    background-color: rgba(255,255,255,0.1);
    color: gold;
}

.nav-scrollable {
    display: none;
}

.navbar-toggler:checked ~ .nav-scrollable {
    display: block;
}

#navbarSupportedContent .dropdown-menu {
    top: inherit;
}

* {
    box-sizing: border-box;
}

@media only screen and (max-width:1024px) {

    .loginAndSignUp, .userDropdown {
        margin: 10px auto 10px !important;
    }
}

@media only screen and (max-width: 1199px) {
    .player-chips {
        font-size: 15px;
    }
}
/* ... */

